--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </title>
 </head>
 
-<body  class = "text-white" style="background-image: url(./assets/bg.jpg);">
+<body  class = "text-white" style="background-image: url(./bg.jpg);">
 
 
   <nav id = "navbar" class = "h-44 content-center pr-8 flex flex-row justify-end flex-wrap gap-9" >
